--- a/app/views/airline_delays/by_airline.erb
+++ b/app/views/airline_delays/by_airline.erb
@@ -8,7 +8,7 @@
 	<td><%=delay_record.year%></td>
 	<td><%=delay_record.month%></td>
 
-	<td><%=delay_record.airport_name%></td>
+	<td><%=delay_record.airport_name if delay_record.airport %></td>
 
 
 </tr>
