--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -3,13 +3,11 @@
 <body>
    <%= partial 'template/header' %>
 
-      <div id="main" class="container" role="main">
-		<div class="row">
+      <div id="main" role="main">
 
 		
          <%= yield %>
 			
-		</div> <!--/ .sidebar #main -->
       </div> <!--/ #main -->
 
 
