--- a/app/views/ontime/index.erb
+++ b/app/views/ontime/index.erb
@@ -7,7 +7,7 @@
 <h2>By Airline</h2>
 <ul>
 	<% @airlines.each do |airline| %>
-		<li><%=link_to airline.name, url_for( :ontimes, :delays_by_airline, :airline=>airline) %></li>
+		<li><%=link_to airline.name, url_for( :ontime_records, :delays_by_airline, :airline=>airline) %></li>
 	<% end %>
 </ul>
 
@@ -16,7 +16,7 @@
 
 <ul>
 	<% @airports.each do |airport| %>
-		<li><%=link_to airport.name, url_for( :ontimes, :delays_by_airport, :airport=>airport) %></li>
+		<li><%=link_to airport.name, url_for( :ontime_records, :delays_by_airport, :airport=>airport) %></li>
 	<% end %>
 </ul>
 
