--- a/app/views/template/_meta-header.erb
+++ b/app/views/template/_meta-header.erb
@@ -25,6 +25,7 @@
 
    <%=stylesheet_link_tag "skift/style" %>
    <%=stylesheet_link_tag "these-styles" %>
+	<%=javascript_include_tag "vendor/d3", "vendor/jquery"%>
 <!--
    <link rel='stylesheet' id='contact-form-7-css'  href='http://skift.com/wp/wp-content/plugins/contact-form-7/includes/css/styles.css?ver=3.3' type='text/css' media='all' />
    <link rel='stylesheet' id='simple-microblogging-css'  href='http://skift.com/wp/wp-content/plugins/simple-microblogging/simple-microblogging.css?ver=3.4.2' type='text/css' media='all' />
