--- a/app/views/ontime/graphics/_test-line.erb
+++ b/app/views/ontime/graphics/_test-line.erb
@@ -20,4 +20,20 @@ form {
 
 </style>
 
+
+
+<div id="graphic-delay-causes" class="graphic d3">
+   
+</div>
+
+
 <%=javascript_include_tag "graphics/test-line"%>
+
+
+<script>
+
+
+var the_data = <%=datapoints.to_json%>;
+test_stack(the_data, "#graphic-delay-causes" );
+
+</script>
