--- a/app/views/ontime/_raw-tabular-data.erb
+++ b/app/views/ontime/_raw-tabular-data.erb
@@ -1,5 +1,5 @@
       <% head_fields = [ :year, :month, :arrivals, :delayed_arrivals_rate, :carrier_delayed_arrivals_rate, 
-         :weather_delayed_arrivals_rate, :nas_delayed_arrivals_rate, :other_causes_delayed_arrivals_rate ]
+         :weather_delayed_arrivals_rate, :nas_delayed_arrivals_rate, :late_aircraft_delayed_arrivals, :security_delayed_arrivals ]
 
          head_fields = extra_fields + head_fields if defined?extra_fields
           %>
