--- a/app/views/ontime/delays_by_airline.erb
+++ b/app/views/ontime/delays_by_airline.erb
@@ -32,10 +32,21 @@
 
 </section> <!-- container fold-->
 
+
 <section class="container fold">
+	<h3>Carrier-caused delay rate</h3>
+	<%=partial 'ontime/graphics/test-line', :locals=>{:datapoints=> OntimeRecord.format_group_sum_for_delay_causes_stacked_chart(@ontime_records_grouped) } %>
+
+</section>
 
 
+
+
+
+<section class="container fold">
 	
+
+	<h3>Causes for delay</h3>
 	<%=partial 'ontime/graphics/test-line', :locals=>{:datapoints=> OntimeRecord.format_group_sum_for_delay_causes_stacked_chart(@ontime_records_grouped) } %>
 
 </section>
