--- a/app/views/template/_meta-header.erb
+++ b/app/views/template/_meta-header.erb
@@ -24,7 +24,7 @@
 
 
    <%=stylesheet_link_tag "skift/style" %>
-   <%=stylesheet_link_tag "these-styles" %>
+   <%=stylesheet_link_tag "these-styles", "rickshaw.css" %>
 	<%=javascript_include_tag "vendor/d3", "vendor/d3.layout.min", "vendor/rickshaw", "vendor/jquery"%>
 <!--
    <link rel='stylesheet' id='contact-form-7-css'  href='http://skift.com/wp/wp-content/plugins/contact-form-7/includes/css/styles.css?ver=3.3' type='text/css' media='all' />
