--- a/app/views/main/oneoff.erb
+++ b/app/views/main/oneoff.erb
@@ -29,7 +29,7 @@
 
 <h2>Causes for delay</h2>
 
-<%= partial "ontime/graphics/gchart-latest-causes-breakdown", :locals=>{:periods=>@periods_to_compare }%>
+<%= partial "ontime/graphics/gchart-latest-causes-breakdown", :locals=>{:aggs=>@latest_month_aggs }%>
 
 
 
