--- a/app/views/main/oneoff.erb
+++ b/app/views/main/oneoff.erb
@@ -1,6 +1,8 @@
 
 <div class="container">
 	
+<div class="row">
+	<div class="span7">	
 <%=partial 'external/google-viz-calls'%>	
 	
 	
@@ -37,6 +39,6 @@
 
 
 
-
+</div></div>
 
 </div><!--container-->
